--- a/package.json
+++ b/package.json
@@ -47,7 +47,13 @@
     "styled-components": "^5.1.5",
     "react": "18.2.0",
     "react-native": "0.72.5",
-    "react-native-screens": "^3.25.0"
+    "react-native-screens": "^3.25.0",
+    "formik": "^2.4.5",
+    "react-native-splash-screen": "^3.3.0",
+    "react-native-toast-message": "^2.1.6",
+    "react-native-animatable":"1.3.3",
+    "react-native-modal":"13.0.1",
+    "@gorhom/bottom-sheet": "^4.5.1"
   },
   "resolutions": {
     "@types/react": "^18"
