--- a/ios/rntemplate.xcodeproj/xcshareddata/xcschemes/rntemplate.xcscheme
+++ b/ios/rntemplate.xcodeproj/xcshareddata/xcschemes/rntemplate.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "template.app"
-               BlueprintName = "template"
-               ReferencedContainer = "container:template.xcodeproj">
+               BuildableName = "rntemplate.app"
+               BlueprintName = "rntemplate"
+               ReferencedContainer = "container:rntemplate.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -35,7 +35,7 @@
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
                BuildableName = "templateTests.xctest"
                BlueprintName = "templateTests"
-               ReferencedContainer = "container:template.xcodeproj">
+               ReferencedContainer = "container:rntemplate.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "template.app"
-            BlueprintName = "template"
-            ReferencedContainer = "container:template.xcodeproj">
+            BuildableName = "rntemplate.app"
+            BlueprintName = "rntemplate"
+            ReferencedContainer = "container:rntemplate.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "template.app"
-            BlueprintName = "template"
-            ReferencedContainer = "container:template.xcodeproj">
+            BuildableName = "rntemplate.app"
+            BlueprintName = "rntemplate"
+            ReferencedContainer = "container:rntemplate.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
